chore: update dependencies